--- a/backend/package.json
+++ b/backend/package.json
@@ -29,8 +29,10 @@
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/schedule": "^2.0.1",
+    "@nestjs/swagger": "^5.2.1",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "mongoose": "^6.4.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -38,7 +40,8 @@
     "reflect-metadata": "^0.1.13",
     "request-ip": "^2.2.0",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
